# lab_01_proyecto_poetry

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
avanzado/01-arquitectura-limpia/: README-lab_01.md  notas.md
avanzado/01-arquitectura-limpia/lab_orders_clean_architecture/src/orders_clean_architecture/: main.py
avanzado/01-arquitectura-limpia/lab_orders_clean_architecture/src/orders_clean_architecture/application/: dtos.py  event_bus.py  event_handlers.py  presenters.py
avanzado/01-arquitectura-limpia/lab_orders_clean_architecture/src/orders_clean_architecture/domain/: entities.py  events.py  repositories.py  unit_of_work.py
avanzado/01-arquitectura-limpia/lab_orders_clean_architecture/tests/: test_create_order_use_case.py  test_domain_order.py  test_http_controller.py
avanzado/02-empaquetado-distribucion-cicd/lab_orders_packaging_cicd/: .dockerignore  Dockerfile  README.md  notas.md  pyproject.toml
avanzado/02-empaquetado-distribucion-cicd/lab_orders_packaging_cicd/src/orders_packaged_api/: main.py  schemas.py
avanzado/02-empaquetado-distribucion-cicd/lab_orders_packaging_cicd/tests/: test_app.py
avanzado/03-cli-automatizacion/lab_orders_cli/: README.md  notas.md
avanzado/03-cli-automatizacion/lab_orders_cli/payloads/: order_demo.json
avanzado/03-cli-automatizacion/lab_orders_cli/tests/: test_cli.py
avanzado/04-securidad-mantenimiento/lab_security_runtime/: .env.example  .gitignore  README.md  notas.md  pyproject.toml
avanzado/04-securidad-mantenimiento/lab_security_runtime/src/secure_app/: main.py  settings.py
avanzado/04-securidad-mantenimiento/lab_security_runtime/tests/: conftest.py  test_main.py  test_settings.py
docs/guia-estudio/: README.md  guia-avanzado.md  guia-fundamental.md  guia-intermedio.md
fundamental/01-entorno-herramientas/: notas.md
fundamental/01-entorno-herramientas/lab_01_proyecto_poetry/: README-lab_01.md  pyproject.toml
fundamental/02-fundamentos-lenguaje/: notas.md
fundamental/02-fundamentos-lenguaje/lab_02/: README-lab_02.md
fundamental/02-fundamentos-lenguaje/lab_02/data/: usuarios.json
fundamental/02-fundamentos-lenguaje/lab_02/src/: main.py
fundamental/03-funciones-pythonic/: notas.md
fundamental/03-funciones-pythonic/lab_03/: README-lab_03.md
fundamental/03-funciones-pythonic/lab_03/src/: main.py
fundamental/04-objetos-modelo-datos/lab_04/: README-lab_04.md
fundamental/04-objetos-modelo-datos/lab_04/src/: main.py
fundamental/05-tipado-y-calidad/: notas.md
fundamental/05-tipado-y-calidad/lab_05/: README-lab_05.md
fundamental/05-tipado-y-calidad/lab_05/src/: main.py
fundamental/06-libreria-estandar-io/lab_06/data/: ventas.csv
fundamental/06-libreria-estandar-io/lab_06/output/: reporte.json
fundamental/06-libreria-estandar-io/lab_06/src/: README-lab_06.md  main.py
fundamental/07-http-y-apis/lab_07/: mock_api.py  notas.md
fundamental/07-http-y-apis/lab_07/output/: reporte_descargado.csv
fundamental/07-http-y-apis/lab_07/src/: README-lab_07.md  main.py
intermedio/01-acceso-datos-orm/lab_01/: README-lab_01.md  app.db  notas.md
intermedio/01-acceso-datos-orm/lab_01/app/: crud.py  db.py  main.py  models.py
intermedio/01-acceso-datos-orm/lab_01/migrations/: env.py
intermedio/01-acceso-datos-orm/lab_01/migrations/versions/: 6e1051ba3c53_create_user_order_order_item_tables.py
intermedio/01-acceso-datos-orm/lab_01/tests/: test_crud
intermedio/02-apis-web-fastapi/lab_02/: README-lab_02.md  app.db  notas.md
intermedio/02-apis-web-fastapi/lab_02/app/: db.py  deps.py  main.py  models.py  schemas.py  security.py
intermedio/02-apis-web-fastapi/lab_02/app/routers/: auth.py  orders.py
intermedio/02-apis-web-fastapi/lab_02/tests/: conftest.py  test_auth.py  test_orders.py
intermedio/03-pruebas-tdd/: README-lab_03.md  notas.md
intermedio/03-pruebas-tdd/lab_03/: .coverage
intermedio/03-pruebas-tdd/lab_03/.hypothesis/constants/: 0c1b10a1b5ac49b1  3ab08c1078372215  4cb84a308fcd4149  94544ae16b320432  da39a3ee5e6b4b0d
intermedio/03-pruebas-tdd/lab_03/app/: models.py  notifications.py  pricing.py  service.py
intermedio/03-pruebas-tdd/lab_03/tests/: conftest.py  test_pricing.py  test_properties.py  test_service.py
intermedio/04-concurrencia-rendimiento/lab_04/: README-lab_04.md
intermedio/04-concurrencia-rendimiento/lab_04/app/: benchmarks.py  cpu_bound.py  fetchers.py  server_mock.py
intermedio/05-solid-python.py/: README-lab_05.md  notas.md
intermedio/05-solid-python.py/lab_05/app/: domain.py  ports.py  providers.py  repositories.py  services.py
intermedio/05-solid-python.py/lab_05/tests/: conftest.py  test_lsp_contract.py  test_services.py
intermedio/06-patrones-diseno/lab_06/: README-lab_06.md  notas.md
intermedio/06-patrones-diseno/lab_06/src/lab_patterns/: main.py
intermedio/06-patrones-diseno/lab_06/src/lab_patterns/domain/: models.py
intermedio/06-patrones-diseno/lab_06/src/lab_patterns/pricing/: service.py  strategies.py
intermedio/06-patrones-diseno/tests/: test_cache_decorator.py  test_pricing_strategy.py  test_provider_adapter.py
intermedio/07-ciencia-datos/lab_07/app/: data.py  inference.py  training.py
intermedio/07-ciencia-datos/lab_07/artifacts/: customer_buy_model.joblib
intermedio/07-ciencia-datos/lab_07/data/: customers.csv
intermedio/07-ciencia-datos/lab_07/tests/: test_inference.py  test_training.py
intermedio/08-arquitectura-hexagonal/lab_08/: README-lab_08.md  notas.md
intermedio/08-arquitectura-hexagonal/lab_08/app/: main.py
intermedio/08-arquitectura-hexagonal/lab_08/app/application/: dto.py  use_cases.py
intermedio/08-arquitectura-hexagonal/lab_08/app/domain/: entities.py  ports.py
intermedio/08-arquitectura-hexagonal/lab_08/artifacts/: orders.db
intermedio/08-arquitectura-hexagonal/lab_08/tests/: test_contract_repository.py  test_domain_order.py  test_e2e_api.py  test_use_case_create_order.py
scripts/: smoke_orders_cli.ps1
src/lab_01_proyecto_poetry/: main.py
src/lab_orders_cli/: __init__.py  client.py  config.py  main.py  render.py
workflows/: orders-packaging-ci.yml
(+12 files in other folders)
