[tool.poetry]
name = "python-onboarding"
version = "0.1.0"
description = "Repositorio de capacitacion de Python organizado por modulos y laboratorios"
authors = ["Joseph Rivera"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.12.5"
tzdata = "^2025.3"
httpx = {extras = ["http2"], version = "^0.28.1"}
fastapi = "^0.135.2"
uvicorn = "^0.42.0"
sqlalchemy = "^2.0.48"
alembic = "^1.18.4"
pyjwt = "^2.12.1"
pwdlib = {extras = ["argon2"], version = "^0.3.0"}
python-multipart = "^0.0.22"
pandas = "^3.0.2"
numpy = "^2.4.4"
polars = "^1.39.3"
scikit-learn = "^1.8.0"
joblib = "^1.5.3"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
ruff = "^0.6.9"
pre-commit = "^3.8.0"
mypy = "^1.19.1"
pytest = "^9.0.2"
httpx = "^0.28.1"
anyio = "^4.13.0"
hypothesis = "^6.151.9"
pytest-cov = "^7.1.0"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]
src_paths = ["intermedio/01-acceso-datos-orm/lab_01"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.lint.per-file-ignores]
"**/migrations/env.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
pretty = true
