[tool.poetry]
name = "orders-packaged-api"
version = "0.1.0"
description = "FastAPI lab for packaging, Docker and CI/CD"
authors = ["Joseph Rivera <joseph@example.com>"]
readme = "README.md"
packages = [{ include = "orders_packaged_api", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115,<1.0"
uvicorn = { version = ">=0.30,<1.0", extras = ["standard"] }
pydantic = ">=2.7,<3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<9.0"
httpx = ">=0.27,<1.0"
black = ">=24.0,<26.0"
isort = ">=5.13,<6.0"
ruff = ">=0.6,<1.0"
mypy = ">=1.10,<2.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true