[tool.poetry]
name = "lab-security-runtime"
version = "0.1.0"
description = "Laboratorio de seguridad y mantenimiento con pydantic-settings, auditoria y Docker hardening"
authors = ["Joseph Rivera <joseph@example.com>"]
readme = "README.md"
packages = [{ include = "secure_app", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
pydantic-settings = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
black = "^24.10.0"
isort = "^5.13.2"
ruff = "^0.7.0"
mypy = "^1.13.0"
pip-audit = "^2.7.3"
safety = "^3.2.9"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"